--- a/hdi_hr_payroll/views/hr_loan_views.xml
+++ b/hdi_hr_payroll/views/hr_loan_views.xml
@@ -54,7 +54,7 @@
                                     <field name="installment_number"/>
                                     <field name="installment_date"/>
                                     <field name="amount"/>
-                                    <field name="paid"/>
+                                    <field name="paid" readonly="1"/>
                                     <field name="paid_date"/>
                                 </list>
                             </field>
